# rust_testing

./: README.md
protobuf_testing/proto_msg_lib/: Cargo.toml
protobuf_testing/proto_msg_lib/src/: lib.rs  readme.md
protobuf_testing/proto_msg_lib/src/buffer_defs/: mod.rs  msg_one.proto  msg_one.rs  msg_two.proto  msg_two.rs
protobuf_testing/receiver/: Cargo.toml
protobuf_testing/receiver/src/: main.rs
protobuf_testing/sender/: Cargo.toml
protobuf_testing/sender/src/: main.rs
