[package]
name = "receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stomp = "0.4.0"
futures = "0.3.29"
anyhow = "1.0.75"
pretty_assertions = { version = "1.4.0", features = ["unstable"] }
tokio = { version = "1.34.0", features = ["time", "macros", "rt-multi-thread"] }
quick-protobuf = "0.8.1"
proto_msg_lib = { path= "../proto_msg_lib" }
